--- a/main/templates/main/includes/dashboard.html
+++ b/main/templates/main/includes/dashboard.html
@@ -115,6 +115,13 @@
                             Map
                         </a>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'phc:index' %}">
+                            Admin Dashboard
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
