--- a/phc/templates/phc/county.html
+++ b/phc/templates/phc/county.html
@@ -17,23 +17,30 @@
         <div class="row">
             <div class="col-12">
                 <div class="page-title-box d-flex align-items-center justify-content-between">
-                    <h3 class="mb-0 font-size-18">{{county.name}}</h3>
+                    <h3 class="mb-0 font-size-18">{{ county.name }} - ({{ subcounties_count }})</h3>
+                    <form method="GET" action="{% url 'phc:county_detail' county.id %}" class="form-inline">
+                        <div class="form-group mx-sm-3 mb-2">
+                            <input type="text" name="subcounty_name" class="form-control" placeholder="Search Subcounties">
+                        </div>
+                        <button type="submit" class="btn btn-primary mb-2">Search</button>
+                    </form>
+              
                 </div>
+               
+                   
                 {% if subcounties %}
                     <table class="table table-bordered">
                         <thead>
                             <tr>
                                 <th>ID</th>
                                 <th>Name</th>
-                               
                             </tr>
                         </thead>
                         <tbody>
-                            {% for county in subcounties %}
+                            {% for subcounty in subcounties %}
                             <tr>
-                                <td>{{ county.id }}</td>
-                                <td><a href="{% url 'phc:county_detail' county.id %}">{{ county.name }}</a></td> <!-- Make the county name a clickable link -->
-                                
+                                <td>{{ subcounty.id }}</td>
+                                <td><a href="{% url 'phc:county_detail' subcounty.id %}">{{ subcounty.name }}</a></td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -41,23 +48,23 @@
                     
                     <div class="pagination">
                         <span class="step-links">
-                            {% if counties.has_previous %}
+                            {% if subcounties.has_previous %}
                                 <a href="?page=1">&laquo; first</a>
-                                <a href="?page={{ counties.previous_page_number }}">previous</a>
+                                <a href="?page={{ subcounties.previous_page_number }}">previous</a>
                             {% endif %}
                             
                             <span class="current-page">
-                                Page {{ counties.number }} of {{ counties.paginator.num_pages }}.
+                                Page {{ subcounties.number }} of {{ subcounties.paginator.num_pages }}.
                             </span>
                             
-                            {% if counties.has_next %}
-                                <a href="?page={{ counties.next_page_number }}">next</a>
-                                <a href="?page={{ counties.paginator.num_pages }}">last &raquo;</a>
+                            {% if subcounties.has_next %}
+                                <a href="?page={{ subcounties.next_page_number }}">next</a>
+                                <a href="?page={{ subcounties.paginator.num_pages }}">last &raquo;</a>
                             {% endif %}
                         </span>
                     </div>
                 {% else %}
-                    <p>We have not Created Subcounties in {{county.name}} County Yet, Add them</p>
+                    <p>We have not created subcounties in {{ county.name }} County yet. Add them.</p>
                 {% endif %}
                 <div class="col-12 text-center">
                     <a href="{% url 'phc:create_subcounty' county.id %}" class="btn btn-primary">Add Subcounty</a>
