--- a/main/templates/main/donor.html
+++ b/main/templates/main/donor.html
@@ -7,14 +7,14 @@
         <div class="row">
             <div class="col-12">
                 <div class="page-title-box d-flex align-items-center justify-content-between">
-                    <h3 class="mb-0 font-size-18">Dashboard >> {{ partner.name }}</h3>
+                    <h3 class="mb-0 font-size-18">Dashboard >> {{ donor.name }}</h3>
                 </div>
             </div>
         </div> 
         
         
         <div class="row justify-content-center align-items-center">
-            <div class="col-md-6 col-xl-2">
+            <div class="col-md-6 col-xl-3">
                 <div class="card bg-secondary border-secondary">
                     <div class="card-body">
                         <div class="mb-4">
@@ -23,7 +23,7 @@
                         <div class="row d-flex align-items-center mb-4">
                             <div class="col-6">
                                 <h2 class="d-flex align-items-center text-white mb-0">
-                                    {{ all_pcns }}
+                                    {{ pcns }}
                                 </h2>
                             </div>
                             <div class="col-6 text-right">
@@ -32,36 +32,13 @@
                         </div>
     
                         <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width:100%"></div>
+                            <div class="progress-bar bg-light" role="progressbar" style="width:100%;"></div>
                         </div>
                     </div>
                 </div>
             </div> <!-- end col-->
-          <div class="col-md-6 col-xl-2">
-              <div class="card bg-info border-info">
-                  <div class="card-body">
-                      <div class="mb-4">
-                          <h5 class="card-title mb-0 text-white">PCNs Support</h5>
-                      </div>
-                      <div class="row d-flex align-items-center mb-4">
-                          <div class="col-6">
-                              <h2 class="d-flex align-items-center text-white mb-0">
-                                  {{ partner_pcns }}
-                              </h2>
-                          </div>
-                          <div class="col-6 text-right">
-                              <span class="text-white-50">{{ partner_pcns_percentage }} % </i></span>
-                          </div>
-                      </div>
 
-                      <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                          <div class="progress-bar bg-light" role="progressbar" style="width: {{ partner_pcns_percentage }}%;"></div>
-                      </div>
-                  </div>
-              </div>
-          </div> <!-- end col-->
-
-          <div class="col-md-6 col-xl-2">
+          <div class="col-md-6 col-xl-3">
               <div class="card bg-success border-success">
                   <div class="card-body">
                       <div class="mb-4">
@@ -70,7 +47,7 @@
                       <div class="row d-flex align-items-center mb-4">
                           <div class="col-6">
                               <h2 class="d-flex align-items-center text-white mb-0">
-                                  {{ fully_established }}
+                                  {{ pcn_fully_established }}
                               </h2>
                           </div>
                           <div class="col-6 text-right">
@@ -84,7 +61,7 @@
                   </div>
               </div>
           </div> <!-- end col-->
-          <div class="col-md-6 col-xl-2">
+          <div class="col-md-6 col-xl-3">
             <div class="card bg-warning border-warning">
                 <div class="card-body">
                     <div class="mb-4">
@@ -93,7 +70,7 @@
                     <div class="row d-flex align-items-center mb-4">
                         <div class="col-6">
                             <h2 class="d-flex align-items-center text-white mb-0">
-                                {{ in_progress }}
+                                {{ pcn_in_progress }}
                             </h2>
                         </div>
                         <div class="col-6 text-right">
@@ -108,7 +85,7 @@
             </div>
         </div> <!-- end col-->
 
-        <div class="col-md-6 col-xl-2">
+        <div class="col-md-6 col-xl-3">
           <div class="card bg-danger border-danger">
               <div class="card-body">
                   <div class="mb-4">
@@ -117,7 +94,7 @@
                   <div class="row d-flex align-items-center mb-4">
                       <div class="col-6">
                           <h2 class="d-flex align-items-center text-white mb-0">
-                              {{ not_started }}
+                              {{ pcn_not_started }}
                           </h2>
                       </div>
                       <div class="col-6 text-right">
@@ -135,18 +112,20 @@
       <div class="row">
         <div class="col-6">
             <div class="card">
-               
+                <div class="card-header text-center">Implementing Partner Summery</div>
                 <div class="card-body">
-                   
-                    <canvas id="subcountiesByStatusChart" width="400" height="400"></canvas>
+                    <canvas id="donorpartnersDonut" width="400" height="400"></canvas>
 
                 </div>
             </div>
         </div>
         <div class="col-6">
             <div class="card">
+                <div class="card-header text-center">
+                    Implementation Progress
+                </div>
                     <div class="card-body">
-                    <canvas id="subcountiesByStatusPieChart" width="400" height="200"></canvas>
+                        <canvas id="donorpartnerpiechart" width="400" height="400"></canvas>
                     </div>
             </div>
         </div>
@@ -169,42 +148,40 @@
                         <tr>
                             <th>ID</th>
                             <th>SubCounty</th>
-                            <th>Partner Support</th>
-                            <th>In Progress</th>
                             <th>Fully Established</th>
+                            <th>In Progress</th>
                             <th>Not Started</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for subcounty in subcounties_associated %}
+                        {% for county in pcns_list %}
                         <tr>
-                            <td>{{ subcounty.id }}</td>
-                            <td>{{ subcounty.name }}</td>
-                            <td>{% if subcounty.partners.all %}Yes{% else %}No{% endif %}</td>
-                            <td>{% if subcounty.status == 1 %}Yes{% else %}No{% endif %}</td>
-                            <td>{% if subcounty.status == 2 %}Yes{% else %}No{% endif %}</td>
-                            <td>{% if subcounty.status == 0 %}Yes{% else %}No{% endif %}</td>
+                            <td>{{ county.id }}</td>
+                            <td>{{ county.name }}</td>
+                            <td>{% if county.status == 2 %}Yes{% else %}No{% endif %}</td>
+                            <td>{% if county.status == 1 %}Yes{% else %}No{% endif %}</td>
+                            <td>{% if county.status == 0 %}Yes{% else %}No{% endif %}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
                 </table>
                 
-                <div class="pagination pagination-sm">
-                    <span class="step-links">
-                        {% if subcounties_associated.has_previous %}
-                        <a href="?subcounties_page=1" class="btn btn-primary">&laquo; First</a>
-                        <a href="?subcounties_page={{ subcounties_associated.previous_page_number }}" class="btn btn-primary">Previous</a>
-                        {% endif %}
-                
-                        <span class="current-page">{{ subcounties_associated.number }}</span>
-                
-                        {% if subcounties_associated.has_next %}
-                        <a href="?subcounties_page={{ subcounties_associated.next_page_number }}" class="btn btn-primary">Next</a>
-                        <a href="?subcounties_page={{ subcounties_associated.paginator.num_pages }}" class="btn btn-primary">Last &raquo;</a>
-                        {% endif %}
-                    </span>
-                </div>
-                
+                    <div class="pagination pagination-sm">
+                        <span class="step-links">
+                            {% if pcns_list.has_previous %}
+                            <a href="?page=1" class="btn btn-primary">&laquo; First</a>
+                            <a href="?page={{ pcns_list.previous_page_number }}" class="btn btn-primary">Previous</a>
+                            {% endif %}
+            
+                            <span class="current-page">{{ page_counties.number }}</span>
+            
+                            {% if pcns_list.has_next %}
+                            <a href="?page={{ pcns_list.next_page_number }}" class="btn btn-primary">Next</a>
+                            <a href="?page={{ pcns_list.paginator.num_pages }}" class="btn btn-primary">Last &raquo;</a>
+                            {% endif %}
+                        </span>
+                    </div>
+            
                 </div> <!-- end card body-->
             </div> <!-- end card -->
             
