--- a/phc/templates/phc/index.html
+++ b/phc/templates/phc/index.html
@@ -46,11 +46,11 @@
          </div>
 
          <div class="col-lg-3">
-            <a href="">
+            <a href="{% url 'phc:donors' %}">
              <section class="card">
                  <img src="{% static 'main/images/users/users.png' %}" class="card-img" alt="...">
                  <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                   <h2 class="card-title text-white">Indicators</h2>
+                   <h2 class="card-title text-white">Donors</h2>
                  </div>
                </section>  
             </a>            
