--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -14,7 +14,7 @@
         
         
         <div class="row justify-content-center align-items-center">
-            <div class="col-md-6 col-xl-2">
+            <div class="col-md-6 col-xl-3">
                 <div class="card bg-secondary border-secondary">
                     <div class="card-body">
                         <div class="mb-4">
@@ -37,31 +37,8 @@
                     </div>
                 </div>
             </div> <!-- end col-->
-          <div class="col-md-6 col-xl-2">
-              <div class="card bg-info border-info">
-                  <div class="card-body">
-                      <div class="mb-4">
-                          <h5 class="card-title mb-0 text-white">Partner Support</h5>
-                      </div>
-                      <div class="row d-flex align-items-center mb-4">
-                          <div class="col-6">
-                              <h2 class="d-flex align-items-center text-white mb-0">
-                                  {{ pcn_with_partners }}
-                              </h2>
-                          </div>
-                          <div class="col-6 text-right">
-                              <span class="text-white-50">{{ pcns_with_partners_percentage }} % </i></span>
-                          </div>
-                      </div>
 
-                      <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                          <div class="progress-bar bg-light" role="progressbar" style="width: {{ pcns_with_partners_percentage }}%;"></div>
-                      </div>
-                  </div>
-              </div>
-          </div> <!-- end col-->
-
-          <div class="col-md-6 col-xl-2">
+          <div class="col-md-6 col-xl-3">
               <div class="card bg-success border-success">
                   <div class="card-body">
                       <div class="mb-4">
@@ -84,7 +61,7 @@
                   </div>
               </div>
           </div> <!-- end col-->
-          <div class="col-md-6 col-xl-2">
+          <div class="col-md-6 col-xl-3">
             <div class="card bg-warning border-warning">
                 <div class="card-body">
                     <div class="mb-4">
@@ -108,7 +85,7 @@
             </div>
         </div> <!-- end col-->
 
-        <div class="col-md-6 col-xl-2">
+        <div class="col-md-6 col-xl-3">
           <div class="card bg-danger border-danger">
               <div class="card-body">
                   <div class="mb-4">
@@ -135,18 +112,15 @@
       <div class="row">
         <div class="col-6">
             <div class="card">
-                <div class="card-header text-center">Implementing Partner Summery</div>
                 <div class="card-body">
-                    <canvas id="partnerSupportPieChart" width="400" height="400"></canvas>
+                    <canvas id="statusBarChart1" width="400" height="400"></canvas>
 
                 </div>
             </div>
         </div>
         <div class="col-6">
             <div class="card">
-                <div class="card-header text-center">
-                    Implementation Progress
-                </div>
+               
                     <div class="card-body">
                         <canvas id="statusPieChart" width="400" height="400"></canvas>
                     </div>
@@ -162,7 +136,7 @@
                     <div class="col-md-6">
                         <h4 class="card-title">PCNs ACTION</h4>
                         <p class="card-subtitle mb-4">
-                            The table below summarizes the PCNs Progress in Kenya per County
+                            The table below summarizes the PCNs Establishment in kenya Per county
                         </p>
                     </div>
                     <div class="col-md-6">
@@ -188,9 +162,8 @@
                             <tr>
                                 <th>ID</th>
                                 <th>County</th>
-                                <th>Partner Support</th>
-                                <th>In Progress</th>
                                 <th>Fully Established</th>
+                                <th>In Progress</th>
                                 <th>Not Started</th>
                             </tr>
                         </thead>
@@ -199,9 +172,8 @@
                             <tr>
                                 <td>{{ county.id }}</td>
                                 <td>{{ county.name }}</td>
-                                <td>{{ county.partner_support }}</td>
-                                <td>{{ county.in_progress }}</td>
                                 <td>{{ county.fully_established }}</td>
+                                <td>{{ county.in_progress }}</td>
                                 <td>{{ county.not_started }}</td>
                             </tr>
                             {% endfor %}
