--- a/main/templates/main/includes/dashboard.html
+++ b/main/templates/main/includes/dashboard.html
@@ -19,6 +19,25 @@
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item waves-effect waves-light dropdown-toggle" id="page-header-user-dropdown"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-donate"></i>
+                    <span class="d-none d-sm-inline-block ml-1">Donors</span>
+                    <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    {% for county in donors %}
+                    <a href="{% url 'main:donor' county.id %}" class="dropdown-item notify-item">
+
+                        <i class="fas fa-flag text-danger"></i>
+                           <span class="align-middle">{{ county.name }}</span>
+                    </a>
+                    {% endfor %}
+                    
+                </div>
+            </div>
+
+            <div class="dropdown d-inline-block">
+                <button type="button" class="btn header-item waves-effect waves-light dropdown-toggle" id="page-header-user-dropdown"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-handshake"></i>
                     <span class="d-none d-sm-inline-block ml-1">Partners</span>
                     <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
@@ -136,12 +155,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'main:dashboard' %}">
-                            Overview
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'main:graphs' %}">
-                            Graphs
+                            PCNs Establishment
                         </a>
                     </li>
                     <li class="nav-item">
