--- a/main/templates/main/partners.html
+++ b/main/templates/main/partners.html
@@ -16,7 +16,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-header text-center">
-                    Implementation Progress
+                    PCNs Partner Support
                 </div>
                     <div class="card-body">
                         <canvas id="partnerSupportPieChart" width="400" height="400"></canvas>
