--- a/main/templates/main/partners.html
+++ b/main/templates/main/partners.html
@@ -19,16 +19,18 @@
                     PCNs Partner Support
                 </div>
                     <div class="card-body">
-                        <canvas id="partnerSupportPieChart" width="400" height="400"></canvas>
+                        <canvas id="partnerSupportPieChart" width="400" height="500"></canvas>
                     </div>
             </div>
         </div>
 
         <div class="col-6">
             <div class="card">
-                <div class="card-header text-center">Partner Support</div>
+                <div class="card-header text-center">Donor Support</div>
                 <div class="card-body">
-                    <canvas id="partnerDonutChart" width="400" height="400"></canvas>
+                    <!-- <canvas id="partnerDonutChart" width="400" height="400"></canvas> -->
+                    <canvas id="donorPieChart" width="400" height="100"></canvas>
+
 
                 </div>
             </div>
